--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,200 +1,31 @@
-linters-settings:
-  cyclop:
-    max-complexity: 15  # Increased - crawlers often have legitimate branching logic
-    skip-tests: true
-  
-  gocognit:
-    min-complexity: 15  # Increased - complex business logic in crawlers is normal
-  
-  gocyclo:
-    min-complexity: 15  # Increased - matches gocognit
-  
-  lll:
-    line-length: 140  # Increased - logging statements and URLs often exceed 120
-    tab-width: 1
-  
-  funlen:
-    lines: 100  # Increased - crawl/process functions legitimately need more lines
-    statements: 60  # Increased slightly
-    ignore-comments: true
-  
-  dupl:
-    threshold: 100  # Decreased - catch more duplication for refactoring opportunities
-  
-  revive:
-    severity: warning
-    confidence: 0.8
-    rules:
-      - name: exported
-        disabled: false
-      - name: package-comments
-        disabled: true  # Often noisy for internal packages
-      - name: unexported-return
-        disabled: false
-      - name: time-naming
-        disabled: false
-      - name: var-declaration
-        disabled: false
-      - name: context-as-argument
-        disabled: false
-      - name: context-keys-type
-        disabled: false
-      - name: indent-error-flow
-        disabled: false
-  
-  depguard:
-    rules:
-      main:
-        deny:
-          - pkg: github.com/pkg/errors
-            desc: "Use standard 'errors' package or fmt.Errorf with %w"
-          - pkg: io/ioutil
-            desc: "Deprecated since Go 1.16, use 'io' or 'os' package"
-  
-  errcheck:
-    check-type-assertions: true
-    check-blank: true
-    exclude-functions:
-      - (io.Closer).Close
-      - (*os.File).Close
-      - (io.ReadCloser).Close
-  
-  govet:
-    enable-all: true
-    disable:
-      - shadow  # Often triggers false positives with err variables
-  
-  nestif:
-    min-complexity: 5  # Catches deeply nested code
-  
-  goimports:
-    local-prefixes: your-module-name  # Replace with your actual module path
-  
-  stylecheck:
-    checks: ["all", "-ST1000", "-ST1003"]  # Disable some overly strict naming rules
-  
-  staticcheck:
-    checks: ["all"]
-
+version: "2"
+run:
+  tests: true
+  external:
+    - path: nilaway
+      args:
+        - -include-pkgs=./...
+        - ./...
 linters:
-  disable-all: true
   enable:
-    # Critical - catch bugs and correctness issues
-    - govet
-    - staticcheck
-    - typecheck
-    - errcheck
-    - errorlint
-    - ineffassign
-    - unused
-    - gosimple
-    
-    # Formatting & imports
+    - misspell
+    - revive
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+issues:
+  max-issues-per-linter: 50
+  max-same-issues: 3
+formatters:
+  enable:
     - gofmt
     - goimports
-    - misspell
-    
-    # Style & best practices
-    - stylecheck
-    - revive
-    - unconvert
-    
-    # Resource management
-    - bodyclose
-    - noctx  # Ensures http.Request has context
-    
-    # Complexity (tuned for your use case)
-    - cyclop
-    - gocognit
-    - gocyclo
-    - nestif
-    
-    # Code quality
-    - dupl
-    - prealloc
-    - unparam
-    - nilerr
-    - makezero
-    
-    # Concurrency safety
-    - copyloopvar
-    - contextcheck
-    
-    # Testing
-    - tenv
-    - testifylint  # If you use testify
-    
-    # Performance hints
-    - sloglint  # If using slog
-    
-  fast: false
-
-run:
-  timeout: 5m
-  tests: true
-  modules-download-mode: readonly
-  allow-parallel-runners: true
-  go: '1.21'  # Set to your Go version
-
-issues:
-  exclude-use-default: false
-  max-issues-per-linter: 0
-  max-same-issues: 0
-  
-  exclude-dirs:
-    - vendor
-    - third_party
-    - testdata
-    - examples
-    - scripts
-  
-  exclude-files:
-    - ".*\\.pb\\.go$"
-    - ".*\\.gen\\.go$"
-    - "mock_.*\\.go$"
-  
-  exclude-rules:
-    # Test files - relax some rules
-    - path: _test\.go
-      linters:
-        - errcheck
-        - dupl
-        - funlen
-        - gocognit
-        - gocyclo
-    
-    # Main/CLI files often have higher complexity
-    - path: cmd/
-      linters:
-        - gocyclo
-        - gocognit
-        - funlen
-    
-    # Allow longer lines in error messages and logging
-    - linters:
-        - lll
-      source: '(logging\.|fmt\.Errorf|errors\.New)'
-    
-    # Common false positives
-    - text: "shadow: declaration of \"err\""
-      linters:
-        - govet
-    
-    - text: "G404: Use of weak random number generator"
-      linters:
-        - gosec
-      path: _test\.go
-    
-    # Exclude some staticcheck checks that are too noisy
-    - linters:
-        - staticcheck
-      text: "SA1019:"  # Deprecated functions - review these manually
-
-output:
-  formats:
-    - format: colored-line-number
-  print-issued-lines: true
-  print-linter-name: true
-  uniq-by-line: true
-  sort-results: true
-  color: always
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
