Linting elements, function name changes for increased legibility.

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -6,7 +6,7 @@ external:
   - name: nilaway
     command: nilaway
     args:
-      - ./...
+      - ./... # DOES NOT RUN, RUN MANUALLY IN TERMINAL: nilaway ./...
 
 linters:
   enable:
