--- a/web/src/files/example.toml
+++ b/web/src/files/example.toml
@@ -24,13 +24,12 @@ metarr_concurrency = 5
 metarr_default_output_dir = "/home/user/tubarr/{{channel_name}}/{{year}}"
 
 # Transcoding
-metarr-transcode_gpu = "auto"
-metarr-transcode_gpu_node = "/dev/dri/renderD128"
-metarr-transcode_video_codecs = [
+metarr_transcode_gpu = "auto"
+metarr_transcode_video_codecs = [
   "h264:hevc",
   "webm:h264"
 ]
-metarr-transcode_audio_codecs = [
+metarr_transcode_audio_codecs = [
   "aac:ac3",
   "dts:eac3",
   "flac:mp3"
